primitives/api/test/tests/ui/multiple_errors.stderr
error: Different `cfg_attr` for the trait and the implementation function
  --> tests/ui/multiple_errors.rs:27:3
   |
27 |         #[cfg_attr(feature = "enable-staging-api", api_version(98))]
   |         ^

error: Trait `cfg_attr` is here
  --> tests/ui/multiple_errors.rs:17:2
   |
17 |     impl self::Api1<Block> for Runtime {
   |     ^^^^

error: Different `cfg_attr` for the trait and the implementation function
  --> tests/ui/multiple_errors.rs:22:3
   |
22 |         #[cfg_attr(feature = "enable-staging-api", api_version(98))]
   |         ^
